# SMPS

./: .gitignore  Makefile  pyproject.toml
data/ismn/: ismn_daily_observations.csv  ismn_daily_results_multidepth.csv  ismn_site_metadata.csv  ismn_validation_results.csv  ismn_validation_summary.csv  ismn_validation_summary_multidepth.csv
data/sensors/: binned - nabeul_1_daily_average.csv
notebooks/: bias_investigation.ipynb  ismn_validation_visualization.ipynb  physics_model_validation.ipynb  physics_prior_demonstration.ipynb
results/ismn_validation/: depth_summary_20260108_160629.csv  depth_summary_20260109_145140.csv  horizon_summary_20260109_145140.csv  ismn_validation_results_20260108_120653.csv  ismn_validation_results_20260108_154635.csv  ismn_validation_results_20260108_160629.csv  ismn_validation_results_20260109_145140.csv  seasonal_summary_20260109_145140.csv  station_quality_report.csv  station_summary_20260108_160629.csv  station_summary_20260109_145140.csv  validation_summary.csv
scripts/: analyze_horizons.py  calibrate_physics_model.py  check_data_quality.py  compare_validation_runs.py  plot_latest_figures.py  plot_latest_scatter_fits.py  plot_scatter_fit_report.py  plot_validation_report.py  rOld_un_ismn_validation.py  run_ismn_validation.py  setup_data_sources.py  validate_depth_matched.py  validate_ismn.py  validate_multimonth.py  validate_physics_model.py
scripts/utils/: __init__.py  data_fetchers.py
src/smps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  (+1 more)
tests/: __init__.py  test_calibration_smoke.py  test_canonical_pipeline.py
(+591 files in other folders)
