[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smps"
version = "0.1.0"
description = "Soil Moisture Prediction System"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "requests",
    "matplotlib",
    "tqdm",
    "pydantic",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]
[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests requiring external services",
]
# Skip integration tests by default
addopts = "-m 'not integration'"